15_Ingress_Controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
Metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: demo.in
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /student
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
